# price_api

./: .env  .gitignore  Cargo.toml  PROJECT.md  README.md  append_btcusd_latest.sh  init_btc_usdt.sql
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/ui_web/: Cargo.toml  index.html
apps/ui_web/src/: lib.rs
docker/: pg.yaml
