[package]
name = "ui-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net = { version = "0.6", features = ["http"] }
js-sys = "0.3"
plotters = "0.3"
plotters-canvas = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "EventTarget",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Storage",
    "Window",
] }
